Updated latex files with info from Chapter 2

--- a/Economics_Template.tex
+++ b/Economics_Template.tex
@@ -2,6 +2,7 @@
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{enumerate}
+\usepackage{verbatim}
 \usepackage{graphicx}
 \setlength{\textheight}{8.5in} \setlength{\topmargin}{-.2in}
 \setlength{\headheight}{.2in} \setlength{\headsep}{0in}
@@ -10,6 +11,14 @@
 \begin{document}
 
 \noindent {\bf Note: All definitions, summaries, and inspiration drawn from The \textit {The Economics of Money, Banking, and Financial Markets, Seventh Edition} by Frederic S. Mishkin} \\
+
+\newpage
+
+\begin{center}
+\underline{\bf \huge Chapter 1}
+\end{center}
+
+\noindent \underline{\bf Why Study Financial Markets?}\\
 
  \noindent Financial institutions - the systems to be modeled \\
 
@@ -40,8 +49,14 @@
 \noindent conversion - a function for converting one form of currency to another, with the value returned being the \\
 \noindent foreign exchange rate - the price of one country's currency in terms of another\\
 
+\noindent \underline{\bf Why Study Banking and Financial Institutions?}\\
+
+\noindent {\bf Structure of the Financial System}\\
+
 \noindent financial intermediaries - nodes that borrow funds from people who have saved and in turn make loans to others\\
 \noindent i.e. banks, insurance companies, NBFCs (non-banking financial companies), pension funds (retirement), and investment banks\\
+
+\noindent {\bf Banks and Other Financial Institutions}\\
 
 \noindent banks - financial intermediaries that accept deposits and make loans. Examples include commercial banks, savings and loan associations, mutual savings banks, and credit unions\\
 
@@ -49,8 +64,12 @@
 
 \noindent loan -a function which subtracts from an agent's (the lender's) wealth and adds to the wealth of another (the borrower), while ensuring a claim on that transfered wealth in the name of the lender\\
 
+\noindent {\bf Financial Innovations}\\
+
 \noindent way down the road: \\
 \noindent e-finance - a separate channel of delivering financial services electronically (different edge flavor)\\
+
+\noindent {\bf Money and Business Cycles}\\
 
 \noindent money - anything that is generally accepted in payment for goods or services or the repayment of debts\\
 
@@ -67,15 +86,27 @@
 
 \noindent monetary theory - the theory that relates changes in the quantity of money to changes in economic activity\\
 
+\noindent {\bf Money and Inflation}\\
+
 \noindent aggregate price level (price level) - the average price of goods and services in an economy\\
 
 \noindent inflation - any time interval during which the slope of the aggregate price level vs time is positive\\
 
 \noindent inflation rate - the rate of change of the price level, usually measured as a percentage change per year\\
 
+\noindent {\bf Money and Interest Rates}\\
+
+\noindent {\bf Conduct of Monetary Policy}\\
+
 \noindent monetary policy - the management of the money supply and interest rates (social philosophy or function), way down the road\\
 
 \noindent central bank -  the government agency that oversees the banking system and is responsible for the amount of money and credit supplied in the economy, a node in the network with the most influence; see Wheeler, Modeling Marx: An Exercise in Futility\\
+
+\noindent Federal Reserve System (the Fed) - the central banking authority responsible for monetary policy in the United States\\
+
+\newpage
+
+\noindent {\bf Fiscal Policy and Monetary Policy}\\
 
 \noindent fiscal policy - (social philosophy) policy that involves decisions about government spending and taxation\\
 
@@ -89,10 +120,11 @@
 \noindent aggregate income - the total income of factors of production (land, labor, capital) in the economy; for now, equivalent to the GDP;\\
 \noindent see Textbooks/Economics.../Chapter1.cpp\\
 
-\newpage
+\newpage 
 
-Chapter 1 Summary\\
-
+\begin{center}
+\large {\bf Chapter 1 Summary}
+\end{center}
 
 \noindent 1. Activities in financial markets have direct effects on individuals' wealth, the behavior of businesses, and the efficiency of the economy.\\
 Three financial markets deserve particular attention: \\
@@ -110,5 +142,202 @@ because it can be an influential factor in the conduct of monetary policy. \\
 \noindent 4. This textbook stresses the economic way of thinking by developing a unifying analytic framework fro the study of money, banking, and financial
 markets using a few basic economic principles. This textbook also emphasizes the interaction of theoretical analysis and empirical data.\\
 
+\newpage
+
+\begin{center}
+\underline{\bf \huge Chapter 2}
+\end{center}
+
+\noindent \underline{\bf Function of Financial Markets} \\
+
+\noindent Types of financial markets: \\
+\indent Debt (bonds) and Equity (stock) Markets\\
+\indent Primary and Secondary Markets\\
+\indent Exchanges and Over-the-Counter Markets\\
+\indent Money and Capital Markets\\
+
+\noindent direct finance - the system in which borrowers borrow funds directly from lenders in financial markets by selling them securities \\
+
+\noindent liabilities - IOUs or debts\\
+
+\noindent \underline{\bf Structure of Financial Markets}\\
+
+\noindent {\bf Debt and Equity Markets}\\
+
+\noindent maturity - time to the expiration date (maturity date) of a debt instrument\\
+
+\noindent short-term debt instrument - having a maturity of a year or less\\
+
+\noindent long-term debt instrument - having a maturity of over ten years\\
+
+\noindent intermediate-term debt instrument - having a maturity between one and ten years\\
+
+\noindent equities - claims to share in the net income and assets of a corporation (such as common stocks)\\
+
+\noindent dividends - periodic payments made by equities to shareholders\\
+
+\newpage
+
+\noindent {\bf Primary $\&$ Secondary Markets}\\
+
+\noindent primary market - a financial market in which new issues of a security are sold to initial buyers\\
+
+\noindent secondary market - a financial market in which securities that have been previously issued (and are thus second-hand) can be resold\\
+e.g. New York and American Stock Exchange and NASDAQ, bond markets, foreign exchange markets, futures markets, and options markets\\
+
+\noindent investment banks - firms that assist in the initial sale of securities in the primary market\\
+
+\noindent underwriting - guaranteeing prices on securities to corporations and then selling the securities to the public\\
+
+\noindent brokers - agents for investors; they match buyers with sellers\\
+
+\noindent dealers - people who link buyers with sellers by buying and selling securities at stated prices\\
+
+\noindent liquid - easily converted to cash\\
+
+\noindent {\bf Exchanges and Over-the-Counter Markets}\\
+
+\noindent exchanges - secondary markets in which buyers and sellers of securities (or their agents or brokers) meet in one central location to conduct transactions\\
+e.g. NYSE, American Stock Exchange, Chicago Board of Trade\\
+
+\noindent over-the-counter (OTC) market == a secondary market in which dealers at different locations who have an inventory of securities stand ready to buy and sell securities "over the counter" to anyone who comes to them and is willing to accept their prices\\
+e.g. U.S. government bond market\\
+
+\noindent {\bf Money and Capital Markets}\\
+
+\noindent money market - a financial market in which only short-term debt instruments are traded\\
+
+\noindent capital market - a financial market in which longer-term debt and equity instruments are traded\\
+
+\noindent \underline{\bf Internationalization of Financial Markets}\\
+
+\noindent (way down the road) \\
+
+\noindent {\bf International Bond Market, Eurobonds, $\&$ Eurocurrencies}\\
+
+\noindent foreign bond - bonds sold in a foreign country and denominated in that country's currency\\
+
+\noindent Eurobonds - bonds denominated in a currency other than that of the country in which they are sold\\
+
+\noindent Eurocurrencies - a variant of the eurobond, which are foreign currencies deposited in banks outside the home country\\
+
+\noindent Eurodollar - US. dollars that are deposited in foreign banks outside the U.S. or in foreign branches of U.S. banks\\
+
+\noindent {\bf World Stock Markets}\\
+
+\noindent (way down the road) \\
+
+\noindent \underline{\bf Function of Financial Intermediaries}\\
+
+\noindent indirect finance - the system in which funds are reallocated through the use of financial intermediaries\\
+
+\noindent financial intermediation - the process of indirect finance whereby financial intermediaries link lender-savers with borrower-spenders\\
+
+\noindent {\bf Transaction Costs}\\
+
+\noindent transaction costs - the time and money spent trying to exchange financial assets, goods, or services\\
+
+\noindent economies of scale - the reduction in transaction costs per dollar of transaction as the size (scale) of transactions increases\\
+
+\noindent liquidity services - services that make it easier for customers to conduct transactions\\
+
+\newpage
+
+\noindent {\bf Risk Sharing}\\
+
+\noindent risk - the degree of uncertainty associated with the return on an asset\\
+
+\noindent risk sharing - the process of creating and selling assets with risk characteristics that people are comfortable with and then using the funds 
+they acquire by selling these assets to purchase other assets that may have far more risk\\
+
+\noindent asset transformation - the process of turning risky assets into safer assets for investors by creating and selling assets with risk characteristics 
+that people are comfortable with and then using the funds they acquire by selling these assets to purchase other assets that may have far more risk\\
+
+\noindent diversification - investing in a collection (portfolio) of assets whose returns do not always move together, with the result that overall risk
+is lower than for individual assets\\
+
+\noindent portfolio - a collection of assets\\
+
+\noindent {\bf Asymmetric Information: Adverse Selection and Moral Hazard}\\
+
+\noindent asymmetric information - the unequal knowledge that each party to a transaction has about the other party\\
+
+\noindent adverse selection - the problem created by asymmetric information before a transaction occurs: the people who are the most undesirable from the 
+other party's perspective are the ones who are most likely to want to engage in the financial transaction\\
+
+\noindent moral hazard - the risk that one party to a transaction will engage in behavior that is undesirable from the other party's perspective\\
+
+\newpage
+
+\noindent \underline{\bf Financial Intermediaries}\\
+
+\noindent thrift institutions (thrifts) - savings and loan associations, mutual savings banks, and credit unions\\
+
+\noindent Types of Financial Intermediaries:\\
+
+\noindent Depository Institutions\\
+\indent Commercial banks\\
+\indent Savings and Loans Associations (S$\&$Ls)\\
+\indent Mutual Savings Banks\\
+\indent Credit Unions\\
+
+\noindent Contractual  Savings Institutions\\
+\indent Life Insurance Companies\\
+\indent Fire and Casualty Insurance Companies\\
+\indent Pension Funds and Government Retirement Funds\\
+
+\noindent Investment  Intermediaries\\
+\indent Finance Companies\\
+\indent Mutual Funds\\
+\indent Money Market Mutual Funds\\
+
+\noindent \underline{\bf Regulation of the Financial System}\\
+
+\noindent {\bf Increasing Information Available to Investors}\\
+
+\noindent {\bf Ensuring the Soundness of Financial Intermediaries}\\
+
+\noindent financial panic - the widespread collapse of financial markets and intermediaries in an economy\\
+
+\noindent Six types of government implemented regulations:\\
+	
+\indent Restrictions on Entry\\
+\indent Disclosure\\
+\indent Restrictions on Assets and Activities\\
+\indent Deposit Insurance\\
+\indent Limits on Competition\\
+\indent Restrictions on Interest Rates\\
+
+\newpage
+\begin{center}
+\large {\bf Chapter 2 Summary}
+\end{center}
+
+\noindent 1. The basic function of financial markets is to channel funds from savers who have an excess of funds to spenders who have a shortage of funds.
+Financial markets can do this either through direct finance, in which borrowers borrow funds directly from lenders by selling them securities,
+or through indirect finance, which involves a financial intermediary that stands between the lender-savers and the borrower-spenders and helps 
+transfer funds from one to the other. This channeling of funds improves the economic welfare of everyone in the society because it allows funds
+to move from people who have no productive investment opportunities to those who have such opportunities, thereby contributing to increased efficiency
+in the economy. In addition, channeling of funds directly benefits consumers by allowing them to make purchases when they need them most.\\
+
+\noindent 2. Financial markets can be classified as debt and equity markets, primary and secondary markets, exchanges and over-the-counter markets, 
+and money and capital markets.\\
+
+\noindent 3. An important trend in recent years is the growing internationalization of financial markets. Eurobonds, which are denominated in a currency
+other than that of the country in which they are sold, are now the dominant security in the international bond market and have surpassed 
+U.S. corporate bonds as a source of new funds. Eurodollars, which are U.S. dollars deposited in foreign banks, are an important source of funds 
+for American banks.\\
+
+\noindent 4. Financial intermediaries are financial institutions that acquire funds by issuing liabilities and in turn use those funds to acquire assets by 
+purchasing securities or making loans. Financial intermediaries play an important role in the financial system because they reduce transaction costs, 
+allow risk sharing, and solve the problems created by adverse selection and moral hazard. As a result, financial intermediaries allow small savers and 
+borrowers to benefit from the existence of financial markets, thereby increasing the efficiency of the economy.\\
+
+\noindent 5. The principal financial intermediaries fall into three categories: banks, contractual savings institutions, and investment intermediaries.\\
+
+\noindent 6. The government regulates financial markets and financial intermediaries for two main reasons: to increase the information available to investors 
+and to ensure the soundness of the financial system. Regulations include requiring disclosure of information to the public, restrictions on 
+who can set up a financial intermediary, restrictions on what assets financial intermediaries can hold, the provision of deposit insurance, 
+reserve requirements, and the setting of maximum interest rates that can be paid on checking accounts and savings deposits.\\
 
 \end{document}
