Updated latex files with info from Chapter 3

--- a/Economics_Template.tex
+++ b/Economics_Template.tex
@@ -340,4 +340,116 @@ and to ensure the soundness of the financial system. Regulations include requiri
 who can set up a financial intermediary, restrictions on what assets financial intermediaries can hold, the provision of deposit insurance, 
 reserve requirements, and the setting of maximum interest rates that can be paid on checking accounts and savings deposits.\\
 
+\newpage
+
+\begin{center}
+\underline{\bf \huge Chapter 3}
+\end{center}
+
+\noindent \underline{\bf Meaning of Money}\\
+
+\noindent Money $\equiv$ money supply - anything that is generally accepted in payment for goods or services or in the repayment of debts, distinct from income and wealth. \\
+
+\noindent currency - Paper money (such as dollar bills) and coins (measured in units of value)\\
+
+\noindent wealth - All resources owned by an individual, including all assets (measured in units of value\\
+
+\noindent income - The of earnings per unit time, represented analytically as $\vec i$ (measured in units of value per unit time\\
+
+\noindent \underline{\bf Functions of Money}\\
+
+\noindent {\bf Medium of Exchange}\\
+
+\noindent medium of exchange - Anything that is used to pay for goods and services\\
+
+\noindent barter economy - An economy without money\\
+
+\noindent transaction cost - The time spent trying to exchange goods or services (measured in units of time)\\
+
+\noindent For a commodity to function effectively as money, it has to meet several criteria: \\
+
+\indent 1. It must be easily standardized, making it simple to ascertain its value
+
+\indent 2. It must be widely accepted
+
+\indent 3. It must be divisible, so that it is easy to "make change"
+
+\indent 4. It must be easy to carry
+
+\indent 5. It must not deteriorate quickly
+
+\noindent {\bf Unit of Account}\\
+
+\noindent unit of account - Anything used to measure value in an economy\\
+
+\noindent Aside: The function determining the number of prices needed for N goods is N choose 2.
+
+\noindent {\bf Store of Value}\\
+
+\noindent store of value - A repository of purchasing power over time (not in units of value/time\\
+
+\noindent liquidity - The relative ease and speed with which an asset can be converted to cash (a function returning a value perhaps?)\\
+
+\noindent hyperinflation - An extreme inflation in which the inflation rate exceeds 50$\%$ per month\\
+
+\noindent \underline{\bf Evolution of the Payments System}\\
+
+\noindent payments system - the method of conducting transactions in the economy\\
+
+\noindent {\bf Commodity Money}\\
+
+\noindent commodity money - money made up of precious metals or another valuable commodity\\
+
+\noindent {\bf Fiat Money}\\
+
+\noindent fiat money - paper currency decreed by a government as legal tender but not convertible into coins or precious metal\\
+
+\noindent {\bf Checks}\\
+
+\noindent {\bf Electronic Payment}\\
+
+\noindent {\bf E-Money}\\
+
+\noindent electronic money (e-money) - money that exists only in electronic form and substitutes for cash as well\\
+
+\noindent smart card - a stored-value card that contains a computer chip that lets it be loaded with digital cash from hte owner's bank account whenever needed\\
+
+\noindent e-cash - electronic money that is used on the Internet to purchase goods or services\\
+
+\newpage
+
+\noindent \underline{\bf Measuring Money}\\
+
+\noindent {\bf The Federal Reserve's Monetary Aggregate}\\
+
+\noindent monetary aggregates - The various measures of the money supply used by the Federal Reserve System (M1, M2, and M3)\\
+
+\noindent M1 - A measure of money that includes currency, traveler's checks, and checkable deposits, such as NOW (negotiated order of withdrawal) accounts and ATS (automatic transfer from savings) accounts\\
+
+\noindent M2 - A measure of money that adds to M1: money market deposit accounts, money market mutual fund shares, small-denomination time deposits, savings deposits, overnight repurchase agreements, and overnight Eurodollars \\
+
+\noindent M3 - A measure of money that adds to M2: large-denomination time deposits, long-term repurchase agreements, and institutional money market fund shares\\
+
+\noindent \underline{\bf How Reliable Are the Money Data?}\\
+
+\noindent "We probably should not pay much attention to short-run movements in the money supply numbers, but should be concerned only with longer-run movements. \\
+
+\newpage
+\begin{center}
+\large {\bf Chapter 3 Summary}
+\end{center}
+
+\noindent 1. To economists, the word \textit{money} has a different meaning from \textit{income} and \textit{wealth}. Money is anything that is generally accepted as payment for goods and services.\\
+
+\noindent 2. Money serves three primary functions: as a medium of exchange, as a unit of account, and as a store of value. Money as a medium of exchange avoids the problem of double coincidence of wants that arises in a barter economy by lowering transaction costs and encouraging specialization and the division of labor. Money as a unit of account reduces the number of prices needed in the economy, which also reduces transaction costs. Money also functions as a store of value, but performs this role poorly if it is rapidly losing value due to inflation.\\
+
+\noindent 3. The payments system has evolved over time. Until several hundred years ago, the payments system in all but the most primitive societies was based primarily on precious metals. The introduction of paper currency lowered the cost of transporting money. The next major advance was the introduction of checks, which lowered transaction costs still further. We are currently moving toward and electronic payments system in which paper is eliminated and all transactions are handled by computers. Despite the potential efficiency of such a system, obstacles are slowing the movement to the checkless society and the development of new forms of electronic money. \\
+
+\noindent 4. The Federal Reserve System has defined three different measures of the money supply - M1, M2, and M3. These measures are not equivalent and do not always move together, so they cannot be used interchangeably by policymakers. Obtaining the precise, correct measure of money does seem to matter and has implications for the conduct of monetary policy.  \\
+
+\noindent 5. Another problem in the measurement of money is that the data are not always as accurate as we would like. Substantial revisions in the data do occur; they indicate that initially released money data are not a reliable guide to short-run (say, month-to-month) movements in the money supply, although they are more reliable over longer periods of time, such as a year.\\
+
+\newpage
+
+
 \end{document}
